<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/nutella_card_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:clickable="true"
            android:elevation="100dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/nutella_cake_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                     />

                <TextView
                    android:id="@+id/nutella_cake_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nutella_cake_image"
                    android:layout_gravity="bottom"
                    android:background="@android:color/holo_red_light"
                    android:text="@string/nutella_pie_title"
                    android:textAlignment="viewStart"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/brownie_card_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:clickable="true"
            android:elevation="100dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/brownies"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                     />

                <TextView
                    android:id="@+id/brownie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/brownies"
                    android:layout_gravity="bottom"
                    android:background="@android:color/holo_red_light"
                    android:text="@string/brownie"
                    android:textAlignment="viewStart"
                    android:textColor="#fff"
                    android:textSize="24sp" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/yellow_cake_card_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:clickable="true"
            android:elevation="100dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/yellow_cake_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                     />

                <TextView
                    android:id="@+id/yellow_cake_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/yellow_cake_image"
                    android:layout_gravity="bottom"
                    android:background="@android:color/holo_red_light"
                    android:text="@string/yellow_cake"
                    android:textAlignment="viewStart"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cheese_cake_card_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:clickable="true"
            android:elevation="100dp"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/cheese_cake_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                     />

                <TextView
                    android:id="@+id/cheese_cake_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cheese_cake_image"
                    android:layout_gravity="bottom"
                    android:background="@android:color/holo_red_light"
                    android:text="@string/cheese_cake"
                    android:textAlignment="viewStart"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp" />

            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>