...
                android:textSize="24sp"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="@dimen/text_margin"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/yellow_cake_ingredients_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/yellow_cake_ingredients_tv"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginEnd="@dimen/text_margin"
...
